# cira-futureedge-studio

./: .gitignore  BLOCK_SYSTEM_IMPLEMENTATION_PLAN.md  CLASSIFICATION_IMPLEMENTATION_STATUS.md  CPP_PIPELINE_BUILDER_PHASED_IMPLEMENTATION.md  CPP_PIPELINE_BUILDER_WITH_IO_INTEGRATION.md  CiRA FutureEdge Studio.htm  DATASET_AUTOMATION_PROPOSAL.md  DATASET_GUIDELINES.md  DEPLOYMENT_CODE_GENERATION_PLAN.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_IO_SIGNAL_MAPPING.md  DEPLOYMENT_PHASED_IMPLEMENTATION_PLAN.md  DEPLOYMENT_PIPELINE_BUILDER_CPP_STANDALONE.md  DEPLOYMENT_PIPELINE_BUILDER_IMPLEMENTATION_PLAN.md  DEPLOYMENT_PIPELINE_BUILDER_IMPLEMENTATION_PLAN_V2.md  DEPLOYMENT_TWO_PLATFORM_STRATEGY.md  DOWNLOAD_MODEL.md  EDGEIMPULSE_INTEGRATION.md  FINAL_VERIFICATION_REPORT.md  FREE_TIER_TRIAL_USAGE.md  GITHUB_SETUP_GUIDE.md  GIT_SETUP_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SPRINT1-2.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE_KEYS_README.md  LICENSE_KEY_GENERATOR_PROMPT.md  LICENSE_SYSTEM_IMPLEMENTATION_GUIDE.md  LICENSE_UI_INTEGRATION_COMPLETE.md  ONNX_EXPORT_BUG_ANALYSIS.md  PERIOD_CONFIG_IMPLEMENTATION_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_WEB_WIDGETS_PROGRESS.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_COMPLETION.md  PHASE_4_2_COMPLETE.md  (+48 more)
.claude/: settings.local.json
Pipeline Projects/: test1.ciraproject  test2.ciraproject  test3.ciraproject  test4.ciraproject  tt1.ciraproject
anomaly_detection/: __init__.py
cira-block-runtime/: BUILD_AND_TEST.md  CMakeLists.txt  DATASET_UPLOAD_GUIDE.md  README.md  WEB_DASHBOARD_README.md  test_manifest.json
cira-block-runtime/blocks/ai/decision_tree/: CMakeLists.txt  decision_tree_block.cpp  decision_tree_block.hpp
cira-block-runtime/blocks/ai/timesnet_onnx/: CMakeLists.txt  timesnet_onnx_block.cpp  timesnet_onnx_block.hpp
cira-block-runtime/blocks/network/web_button/: CMakeLists.txt  web_button_block.cpp
cira-block-runtime/blocks/network/web_led/: CMakeLists.txt  web_led_block.cpp
cira-block-runtime/blocks/outputs/gpio_output/: CMakeLists.txt  gpio_output_block.cpp
cira-block-runtime/blocks/outputs/http_post/: CMakeLists.txt  http_post_block.cpp  http_post_block.hpp
cira-block-runtime/blocks/outputs/mqtt_publisher/: CMakeLists.txt  mqtt_publisher_block.cpp  mqtt_publisher_block.hpp
cira-block-runtime/blocks/outputs/oled_display/: CMakeLists.txt  oled_display_block.cpp  oled_display_block.hpp
cira-block-runtime/blocks/outputs/pwm_output/: CMakeLists.txt  pwm_output_block.cpp  pwm_output_block.hpp
cira-block-runtime/blocks/outputs/websocket/: CMakeLists.txt  websocket_block.cpp  websocket_block.hpp
cira-block-runtime/blocks/processing/channel_merge/: CMakeLists.txt  channel_merge_block.cpp
cira-block-runtime/blocks/processing/low_pass_filter/: CMakeLists.txt  low_pass_filter_block.cpp  low_pass_filter_block.hpp
cira-block-runtime/blocks/processing/normalize/: CMakeLists.txt  normalize_block.cpp  normalize_block.hpp
cira-block-runtime/blocks/processing/sliding_window/: CMakeLists.txt  sliding_window_block.cpp
cira-block-runtime/blocks/sensors/adxl345/: CMakeLists.txt  adxl345_block.cpp
cira-block-runtime/blocks/sensors/analog_input/: CMakeLists.txt  analog_input_block.cpp  analog_input_block.hpp
cira-block-runtime/blocks/sensors/bme280/: CMakeLists.txt  bme280_block.cpp  bme280_block.hpp
cira-block-runtime/blocks/sensors/gpio_input/: CMakeLists.txt  gpio_input_block.cpp  gpio_input_block.hpp
cira-block-runtime/blocks/sensors/synthetic_signal/: CMakeLists.txt  README.md  synthetic_signal_block.cpp
cira-block-runtime/include/: auth_manager.hpp  block_executor.hpp  block_interface.hpp  block_loader.hpp  data_types.hpp  manifest_parser.hpp  metrics_collector.hpp  web_server.hpp
cira-block-runtime/src/: auth_manager.cpp  block_executor.cpp  block_loader.cpp  main.cpp  manifest_parser.cpp  metrics_collector.cpp  web_server.cpp
cira-block-runtime/templates/: gesture_recognition.json
cira-block-runtime/test_datasets/: accelerometer_dataset.cbor  accelerometer_dataset.csv  accelerometer_dataset.json  generate_cbor.py
cira-block-runtime/tests/: CMakeLists.txt  README.md  test_all_blocks.cpp  test_blocks.py  verify_blocks.py
cira-block-runtime/web/: index.html
cira-block-runtime/web/css/: dashboard.css
cira-block-runtime/web/js/: auth.js  dashboard.js  signalplot.js  widgets.js
codegen/: __init__.py
core/: __init__.py  classification_trainer.py  config.py  dsp_generator.py  feature_config.py  feature_extraction.py  feature_filtering.py  feature_names.py  firmware_builder.py  frequency_analyzer.py  license.py  license_manager.py  llm_manager.py  model_trainer.py  project.py  timeseries_trainer.py  windowing.py
core/deep_models/: __init__.py  layers.py  timesnet.py
core/deployment/: __init__.py  deployment_mapper.py
data_sources/: __init__.py  base.py  csv_loader.py  database_loader.py  edgeimpulse_loader.py  label_extractor.py  restapi_loader.py  streaming_loader.py
feature_extraction/: __init__.py
llm/: __init__.py
output/Test_Project/: Test Project.ciraproject
output/aa/: aa.ciraproject
output/aa/firmware/knn/: CMakeLists.txt  anomaly_detector.cpp  anomaly_detector.h  main.cpp
output/aaaa/: aaaa.ciraproject
output/aabb/: aabb.ciraproject
output/aass/: aass.ciraproject
output/aaxx/: aaxx.ciraproject
output/bb/: bb.ciraproject
output/cc/: cc.ciraproject
output/ccc/: ccc.ciraproject
output/cccc/: cccc.ciraproject
output/pipeline_manifest/: block_manifest.json  pipeline_manifest.json
output/qaa/: qaa.ciraproject
output/ts3_jetson_nano/: CMakeLists.txt  README.md
output/ts3_jetson_nano/src/: main.cpp
output/ts3_jetson_orin/: CMakeLists.txt  README.md
output/ts3_jetson_orin/src/: main.cpp
tools/: license_generator.py
ui/: build_panel.py  data_panel.py  deployment_wizard.py  dsp_panel.py  features_panel.py  filtering_panel.py  llm_panel.py  main_window.py  model_panel.py  navigation.py  period_config_panel.py  settings_dialog.py  theme.py
(+58 files in other folders)
